@@ -46,15 +46,13 @@ import inua.eio.ArrayByteBuffer;
 import inua.eio.ByteBuffer;
 
 /**
- * Check that registers and memory can be modified for I386.
- * This test case runs an assembler program that will terminate successfully
- * if left to run untouched.  The test add a syscall observer and modifies 
- * a register which is used as a jump location when the test returns.
- * This causes an alternate code path which issues an exit syscall.
- * The test also modifies other registers as well as a data word in the
- * program being run.  The alternate code path in the program being run
- * will verify the new register values and will not issue the exit syscall
- * unless everything is correct.
+ * Check that memory can be modified.
+ * This test case has frysk run a C program that opens a file and records
+ * a memory address inside.  A SIGSEGV is generated by the program so that 
+ * frysk can know when the file is ready.  Frysk gets the address, modifies
+ * the program's memory and finally continues the C program.  The C program
+ * verifies that the memory has been changed as expected and either
+ * exits cleanly or aborts.
  */
 
 public class TestModify
@@ -123,7 +121,7 @@ public class TestModify
 		    // Modify int values across a page boundary.
 		    addr = memAddr + 12096;
 		    for (int i = 0; i < 100; ++i)
-			e.task.memory.putInt (addr + i * b.wordSize (), 
+			e.task.memory.putInt (addr + i * 4, 
 					     (int) (50 - i));
 		    // Modify an unaliged int value.
 		    addr = memAddr + 14001;
