@@ -1,3 +1,9 @@
+2005-10-26  Jeff Johnston  <jjohnstn@redhat.com>
+
+	* TestModify.java: Fix comment.  Also fix modification code to
+	index by 4 when writing ints as opposed to using word size which
+	may vary from platform to platform.
+
 2005-10-26  Andrew Cagney  <cagney@redhat.com>
 
 	* TaskEvent.java: Delete TaskEvent .Execed, .Exiting, .Exited, and
